--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "streamqueue": "~1.1.1"
   },
   "devDependencies": {
-    "gulp-filter": "~3.0.1"
+    "gulp-filter": "~3.0.1",
+    "gulp-gh-pages": "~0.5.2"
   }
 }
