--- a/src/data/contactInfo.yaml
+++ b/src/data/contactInfo.yaml
@@ -1,3 +1,5 @@
+name: Dmytro Rudnytskykh
+subtitle: Front-end, JS Developer
 items:
   - key: "Date of birth"
     value: "November 26 1994 (20 years)"
@@ -8,9 +10,9 @@ items:
   - key: "Mobile"
     value: "<a href='tel:+380636536215?call'>+38 (063) 65 36 215</a>"
   - key: "Skype"
-    value: "<a href='skype:dmytro.rudnytskykh?call'>dim__sun</a>"
+    value: "<a href='skype:dmytro.rudnitskih?call'>dmytro.rudnitskih</a>"
   - key: "E-mail"
     value: "<a href='mailto: rudnitskih@gmail.com'>rudnitskih@gmail.com</a>"
   - key: "LinkedIn"
-    value: "<a href='https://ua.linkedin.com/in/rudnitskih'>Dmytro Rudnytskykh</a>"
-mainPhoto: /assets/i/photo.jpg
+    value: "<a href='//ua.linkedin.com/in/rudnitskih' target='_blank'>Dmytro Rudnytskykh</a>"
+mainPhoto: assets/i/photo.jpg 
