--- a/src/data/education.yaml
+++ b/src/data/education.yaml
@@ -2,4 +2,4 @@
   duration: 2012-2016
   degree: Bachelor
   almamater: Kyiv Politechnic Institute
-  major: "“System Engineering”, Faculty of Informatics and Computer Science (FIOT)"
+  major: "<span class='hidden-phone'>“System Engineering”, Faculty of Informatics and Computer Science (</span>FIOT<span class='hidden-phone'>)</span>"
