--- a/src/data/experience.yaml
+++ b/src/data/experience.yaml
@@ -1,8 +1,8 @@
 - duration: 2014 - Now
   company: "<a href='//se7ensky.com'>Se7ensky art studio</a>"
   position: "Frontend, JS developer"
-  description: "I have one year of experience developing software using JavaScript, HTML5 and CSS3. I have one year of experience developing software using JavaScript, HTML5 and CSS3. I have one year of experience developing software using JavaScript, HTML5 and CSS3."
+  description: "My responsibilities include full front-end work: markuping, scripting, optimization, supporting, manual testing. For work we are using our builder <a href='//verstat.info' target='_blank'>Verstat</a>. Main stack is Jade/Stylus/Coffeescript and BEM. It help us create really huge project and easy support it. Very often I had write difficult JS components, and sometimes had re-write 3rd part plugins. Sometimes I had write back-end using PHP, Worpress and Jade2Php plugin."
 - duration: 2013 - 2014
   company: Freelance
   position: Markup coder
-  description: "I have one year of experience developing software using JavaScript, HTML5 and CSS3. I have one year of experience developing software using JavaScript, HTML5 and CSS3. I have one year of experience developing software using JavaScript, HTML5 and CSS3."
+  description: "I had be interested in Web development during all my study in <a href='#education'>KPI</a>, markup simple pages, coding lab works using JS, write course project using CMS. Have couple freelance project, but relative my last projects it was awful, so I dont give examples."
