--- a/src/data/softSkills.yaml
+++ b/src/data/softSkills.yaml
@@ -1,12 +1,12 @@
 - key: Analytical Thinking
-  value: "In scholl have champion a lot of time Lugansk region mathematics olympiad, cities tourniment, the medalist of National Physics Olympiad 2010."
+  value: "at school has won many regional mathematics Olympiads, the medalist of National Physics Olympiad 2010."
 - key: Cooperation
-  value: "Love working in team, along wolf isnt about me. Have 5 years experience team player like sportsman."
+  value: "enjoy working in a team, I really believe, that two heads are better, than one. Have 5 years experience team player like sportsman."
 - key: Mathematics
-  value: "Knowledge of arithmetic, algebra, geometry, high mathematic, and their applications."
+  value: "knowledge of algebra, geometry, high math, and their applications."
 - key: Initiative
-  value: "If smt near me is wrong I try to fix it. In scholl create NGO organization. Was member polytyc party"
+  value: "at school create NGO organization. "
 - key: Leadership
-  value: If I feel can lead a situation - I will lead it. Now head of my University`s group. A couple times of year lead groupes people to mountaines.
+  value: if I can lead a situation - I will lead it. Now I am a head of my University`s group. A couple  of times a year I organize a hike in the mountains and led the group.
 - key: Creativity
-  value: "Like photo and videomaking, my youtube chanel goo.gl/UzFEjh. " 
+  value: "like photo and videomaking, my youtube chanel goo.gl/UzFEjh." 
