fix gramar mistackes

--- a/src/data/experience.yaml
+++ b/src/data/experience.yaml
@@ -5,4 +5,4 @@
 - duration: 2013 - 2014
   company: Freelance
   position: Markup coder
-  description: "I`m interested in Web development during all my study in <a href='#education'>KPI</a>, markup simple pages, coding lab works using JS, write course project using CMS."
+  description: "I was interested in Web development during all my study in<a href='#education'>KPI</a>, markup simple pages, coding lab works using JS, write course project using CMS."
