--- a/src/data/projects.yaml
+++ b/src/data/projects.yaml
@@ -32,7 +32,7 @@
     - Responsive website
     - Team Development
     - Supporting
-  responsibilities: "Creation and implementftion adaptive website version, supporting"
+  responsibilities: "Creation and implementftion of an adaptive website version, supporting"
 -
   name: Fastimport
   url: fastimport.ru
@@ -41,7 +41,7 @@
     - Responsive website
     - One person development
     - Supporting
-  responsibilities: "Markuping, scripting, programming back-end using WordPress, PHP, Jade2Php and integration with ArmoCRM"
+  responsibilities: "Markuping, scripting, programming of back-end using WordPress, PHP, Jade2Php and integration with ArmoCRM"
 -
   name: Credit365
   url: credit365.app.se7ensky.com/sitegrid.html
@@ -50,7 +50,7 @@
     - Frontend Development
     - Responsive website
     - Team Development
-  responsibilities: "Managing front-end team, markup and scripting the most difficult part"
+  responsibilities: "Managing front-end team, markup and scripting of the most difficult parts"
 -
   name: OPAYZ
   url: opayz.com
@@ -58,7 +58,7 @@
     - Frontend Development
     - Responsive website
     - Supporting
-  responsibilities: "Supporting and implementable new functional"
+  responsibilities: "Supporting and implementing new functional"
 -
   name: FTBN
   url: ftbn.com
@@ -80,10 +80,10 @@
     - Fullstack Development
     - Responsive website
     - Pet project
-  responsibilities: "Pet project, purpose of which try framework Meteor.js"
+  responsibilities: "Pet project, purpose of which is to try out Meteor.js framework"
 - 
   name: Betonwood
   url: beton-wood.com.ua
   tags: 
     - Frontend Development
-  responsibilities: "Scripting, internet store where database is Google Spreadsheets"
+  responsibilities: "Scripting, online store with database is Google Spreadsheets"
