--- a/src/data/softSkills.yaml
+++ b/src/data/softSkills.yaml
@@ -1,12 +1,12 @@
 - key: Analytical Thinking
-  value: "at school has won many regional mathematics Olympiads, the medalist of National Physics Olympiad 2010."
+  value: "at school won many regional mathematics Olympiads, the medalist of National Physics Olympiad 2010."
 - key: Cooperation
   value: "enjoy working in a team, I really believe, that two heads are better, than one. Have 5 years experience team player like sportsman."
 - key: Mathematics
-  value: "knowledge of algebra, geometry, high math, and their applications."
+  value: "knowledge of algebra, geometry, higher math, and their applications."
 - key: Initiative
-  value: "at school create NGO organization. "
+  value: "at school I created an NGO organization."
 - key: Leadership
-  value: if I can lead a situation - I will lead it. Now I am a head of my University`s group. A couple  of times a year I organize a hike in the mountains and led the group.
+  value: "if I can lead a situation - I will lead it. Now I am a head of my University`s group. Couple of times a year I organize a hike in the mountains and lead the group."
 - key: Creativity
-  value: "like photo and videomaking, my youtube chanel goo.gl/UzFEjh." 
+  value: "like photo and videomaking, my youtube chanel is goo.gl/UzFEjh." 
