--- a/src/data/links.yaml
+++ b/src/data/links.yaml
@@ -4,7 +4,7 @@
   icon: github
   target: _blank
 -
-  url: "//github.com/rudnitskih/SV/SV_Frontend_Rudnytskykh.pdf"
+  url: "SV_Frontend_Rudnytskykh.pdf"
   title: PDF version (generated using Phantom.js)
   icon: pdf
   target: _self
