--- a/src/data/projects.yaml
+++ b/src/data/projects.yaml
@@ -16,7 +16,7 @@
   responsibilities: "Markup landing for ZaxidFest 2015, scripting the visuals effects"
 - 
   name: Astro.club
-  url: astrology.net.ua
+  url: astro.club
   tags: 
     - Frontend Development
     - Responsive website
