--- a/src/data/softSkills.yaml
+++ b/src/data/softSkills.yaml
@@ -9,4 +9,4 @@
 - key: Leadership
   value: "if I can lead a situation - I will lead it. Now I am a head of my University`s group. Couple of times a year I organize a hike in the mountains and lead the group."
 - key: Creativity
-  value: "like photo and videomaking, my youtube chanel is goo.gl/UzFEjh." 
+  value: "like photo and videomaking, my <a href='//goo.gl/UzFEjh.' target='_blank'>youtube chanel</a>" 
