--- a/src/data/contactInfo.yaml
+++ b/src/data/contactInfo.yaml
@@ -1,8 +1,8 @@
 name: Dmytro Rudnytskykh
 subtitle: Front-end, JS Developer
 items:
-  - key: "Date of birth"
-    value: "November 26 1994 (20 years)"
+  - key: "Age"
+    value: "22 years"
   - key: "Location"
     value: "Kyiv, Ukraine"
   - key: "Mobile"
