--- a/src/data/languages.yaml
+++ b/src/data/languages.yaml
@@ -1,7 +1,10 @@
-- key: English
+- 
+  key: English
   level: intermediate 
   description: "Have participated at program Work&Travel USA. Live in Virginia state during 3 mounth"
-- key: Ukrainian
+- 
+  key: Ukrainian
   level: advanced
-- key: Russian
+- 
+  key: Russian
   level: native language
