--- a/src/data/projects.yaml
+++ b/src/data/projects.yaml
@@ -1,89 +1,64 @@
 -
-  name: Union Standard Bank
-  url: unionstandartbank.com.ua
-  tags: 
-    - Fullstack Development
-    - Responsive website
-    - Supporting
-  responsibilities: "Transfer markup to WordPress using PHP and Jade2Php, integration with bank`s CRM. Supporting, markup and scripting new functional"
-- 
-  name: ZaxidFest
-  url: zaxidfest.com
+  name: Eda.ua
+  url: eda.ua
   tags: 
     - Frontend Development
     - Responsive website
-    - One person development
-  responsibilities: "Markup landing for ZaxidFest 2015, scripting the visuals effects"
+    - Supporting
+  responsibilities: "Creation and implementftion of an adaptive website version, supporting"
 - 
   name: Astro.club
   url: astro.club
   tags: 
     - Frontend Development
     - Responsive website
-    - Team Development
-    - Pixel Perfect
-    - Supporting 
-  responsibilities: "Markuping, scripting, fixing bugs, supporting"
--
-  name: Eda.ua
-  url: eda.ua
-  tags: 
-    - Frontend Development
-    - Responsive website
-    - Team Development
-    - Supporting
-  responsibilities: "Creation and implementftion of an adaptive website version, supporting"
+  responsibilities: "Creating markup and scripting"
 -
   name: Fastimport
   url: fastimport.ru
   tags: 
     - Fullstack Development
     - Responsive website
-    - One person development
-    - Supporting
-  responsibilities: "Markuping, scripting, programming of back-end using WordPress, PHP, Jade2Php and integration with ArmoCRM"
+  responsibilities: "Creating markup, scripting, programming of back-end using WordPress, PHP, Jade2Php and integration with ArmoCRM"
 -
   name: Credit365
-  url: credit365.app.se7ensky.com/sitegrid.html
-  tags: 
-    - Сomming Soon
-    - Frontend Development
-    - Responsive website
-    - Team Development
-  responsibilities: "Managing front-end team, markup and scripting of the most difficult parts"
--
-  name: OPAYZ
-  url: opayz.com
+  url: credit365.ua
   tags: 
     - Frontend Development
     - Responsive website
-    - Supporting
-  responsibilities: "Supporting and implementing new functional"
+  responsibilities: "Managing front-end team, creating markup and scripting"
 -
   name: FTBN
-  url: ftbn.com
+  url: ftbn.app.se7ensky.com
   tags: 
     - Frontend Development
     - Responsive website
-    - Supporting
-  responsibilities: "Supporting"
+  responsibilities: "Supporting markup, scripting"
 - 
-  name: Landing for USB
-  url: usb-landing-everyday-v2.app.se7ensky.com
+  name: Landing for Union Standard Bank
+  url: usb-everyday.app.se7ensky.com
   tags: 
     - Frontend Development
-  responsibilities: "Markuping, scripting, integration with Facebook and VK API"
--
-  name: ExchangeUA
-  url: exchangeua.meteor.com
-  tags: 
-    - Fullstack Development
     - Responsive website
-    - Pet project
-  responsibilities: "Pet project, purpose of which is to try out Meteor.js framework"
+  responsibilities: "Creating markup, scripting, integration with Facebook and VK API"
 - 
   name: Betonwood
   url: beton-wood.com.ua
   tags: 
     - Frontend Development
+    - Responsive website
   responsibilities: "Scripting, online store with database is Google Spreadsheets"
+- 
+  name: Intimo
+  url: intimo.com.ua
+  tags: 
+    - Frontend Development
+    - Responsive website
+  responsibilities: "Creating markup and scripting"
+- 
+  name: Credit365
+  url: credit365.ua/ru
+  tags: 
+    - Frontend Development
+    - Responsive website
+  responsibilities: "Creating markup and scripting"
