--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -9,9 +9,4 @@
     name: Se7ensky art studio
     url: se7ensky.com
   position: "Frontend, JS developer"
-  description: "My responsibilities include full front-end work: markuping, scripting, optimization, supporting, manual testing. Sometimes I create back-end using PHP, Worpress and Jade2Php plugin. For work we are using our builder 'Verstat'.  Main stack is Jade/Stylus/CoffeeScript and BEM."
-- duration: 2013 - 2014
-  company:
-    name: Freelance
-  position: Markup coder
-  description: "I was interested in Web development during all my study in <a href='#education'>KPI</a>, markup simple pages, coding lab works using JS, wrote course project using CMS."
+  description: "My responsibilities included full front-end work: creating markup, scripting, optimization, supporting, manual testing. Sometimes I created back-end using PHP, WordPress and Jade2Php plugin. Main stack was Jade/Stylus/CoffeeScript and BEM."
