--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -6,28 +6,28 @@
 - 
   name: Astro.club
   url: astro.club
-  description: "Creating markup and (Responsive website)."
+  description: "Creating markup, scripting."
 -
   name: Fastimport
   url: fastimport.ru
-  description: "Full stack development: creating markup, scripting, programming of back-end using WordPress, PHP, Jade2Php; integration with ArmoCRM (Responsive website)."
+  description: "Full stack development: creating markup, scripting, programming of back-end using WordPress, PHP, Jade2Php; integration with ArmoCRM."
 -
   name: Credit365
   url: credit365.ua
-  description: "Managing front-end team, creating markup and scripting (Responsive website)."
+  description: "Managing front-end team, creating markup and scripting."
 -
   name: FTBN
   url: ftbn.app.se7ensky.com
-  description: "Supporting markup, scripting (Responsive website)."
+  description: "Supporting markup, scripting."
 - 
   name: Landing for Union Standard Bank
   url: usb-everyday.app.se7ensky.com
-  description: "Creating markup, scripting, integration with Facebook and VK API (Responsive website)."
+  description: "Creating markup, scripting, integration with Facebook and VK API."
 - 
   name: Betonwood
   url: beton-wood.com.ua
-  description: "Scripting, online store with database on Google Spreadsheets (Responsive website)."
+  description: "Scripting, online store with database on Google Spreadsheets."
 - 
   name: Intimo
   url: intimo.com.ua
-  description: "Creating markup and scripting (Responsive website)."
+  description: "Creating markup and scripting."
