--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -5,7 +5,7 @@
   description: "Web-service for online order food. Implementing an adaptive website version, supporting."
 - 
   name: ZaxidFest 2015
-  url: zaxidfest15.herokuapp.com
+  url: web.archive.org/web/20150914165508/http://zaxidfest.com/
   description: "Landing for annual international music and festival. Creating markup and scripting."
 - 
   name: Astro.club
