Fix data and some styles.
Remove photo:(

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Dmytro Rudnytskykh, CV
 email: rudnitskih@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Frontend developer with 3 years experience. I like to create user-friendly interfaces, write maintainable code and help business create effective solutions. Have experience writing difficult business logic on UI, creating and supporting markup with 100 and more pages, advanced experience in responsive design, working in a big multinational team. I trust in open-source contribution, agile methodologies, semantic web and user-oriented design.  
+  Frontend developer with 4 years experience. I love create stunning user-friendly interfaces, write maintainable code and help business create effective solutions. Have experience writing difficult business logic on UI, writing testest, creating and supporting markup with 100 and more pages, advanced experience in responsive design, working in a big multinational team.
 baseurl: ""
 url: "http://rudnitskih.pp.ua" # the base hostname & protocol for your site, e.g. http://example.com
 
