--- a/_data/education.yaml
+++ b/_data/education.yaml
@@ -1,12 +1,12 @@
 - 
-  duration: 2016-2018
+  duration: 2016 - 2018
   degree: Master
   almamater:
     name: "Ukrainian Catholic University"
     url: "csds.ucu.edu.ua"
   major: "Computer Science with specialization in Data Science, Faculty of Applied Sciences"
 - 
-  duration: 2012-2016
+  duration: 2012 - 2016
   degree: Bachelor
   almamater:
     name: "Kyiv Politechnic Institute"
