--- a/_data/soft_skills.yaml
+++ b/_data/soft_skills.yaml
@@ -1,10 +1,10 @@
 - name: Analytical Thinking
-  value: "at school won many regional mathematics Olympiads, the medalist of National&nbsp;Physics&nbsp;Olympiad&nbsp;2010."
+  value: "at school won different regional mathematics and physics Olympiads, the medalist of National&nbsp;Physics&nbsp;Olympiad&nbsp;2010."
 - name: Cooperation
   value: "enjoy working in a team, I really believe, that two heads are better, than one. Have 5 years experience team player like sportsman."
 - name: Mathematics
   value: "knowledge of algebra, geometry, higher math, and their applications."
-- name: Initiative
-  value: "at school I created an NGO organization."
 - name: Leadership
-  value: "if I can lead a situation - I will lead it. Now I am a head of my University`s group. Couple of times a year I organize a hike in the mountains and lead the group."
+  value: "if I can lead a situation - I will lead it. Have successful experience manage small group of people and achieve aims together."
+- name: Initiative
+  value: "founder and member alumni different NGO organization."
