--- a/_data/languages.yaml
+++ b/_data/languages.yaml
@@ -1,10 +1,6 @@
 - 
   name: English
-  level: intermediate 
-  description: "Have participated at program Work&Travel USA. Live in Virginia state during 3 month"
-- 
-  name: Ukrainian
-  level: advanced
-- 
-  name: Russian
-  level: native language
+  level: intermediate
+-
+  name: Hebrew
+  level: basic
