--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Dmytro Rudnytskykh, CV
-email: rudnitskih@gmail.com
+title: CV Dmytro Rudnytskykh
 description: > # this means to ignore newlines until "baseurl:"
   Frontend developer with 4 years experience. I love create stunning user-friendly interfaces, write maintainable code and help business create effective solutions. Have experience writing difficult business logic on UI, writing testest, creating and supporting markup with 100 and more pages, advanced experience in responsive design, working in a big multinational team.
 baseurl: ""
