Fix soft skill text

--- a/_data/soft_skills.yaml
+++ b/_data/soft_skills.yaml
@@ -7,4 +7,4 @@
 - name: Leadership
   value: "if I can lead a situation - I will lead it. Have successful experience manage small group of people and achieve aims together."
 - name: Initiative
-  value: "founder and member alumni different NGO organization."
+  value: "founder and alumni different NGO organizations."
