--- a/_data/programming_skills.yaml
+++ b/_data/programming_skills.yaml
@@ -4,7 +4,7 @@
     - 
       name: "Languages"
       values:
-        - JavaScript ES5/ES2016
+        - JavaScript ES2015+
         - HTML
         - CSS
     - 
